cmake_minimum_required(VERSION 2.6)
include_directories(../msg)
add_library(basecode
	consts.cpp
	Element.cpp
	DataElement.cpp
	GlobalDataElement.cpp
	LocalDataElement.cpp
	Eref.cpp
	Finfo.cpp
	DestFinfo.cpp
	Cinfo.cpp
	SrcFinfo.cpp
	ValueFinfo.cpp
	SharedFinfo.cpp
	FieldElementFinfo.cpp
	FieldElement.cpp
	Id.cpp
	ObjId.cpp
	global.cpp
	SetGet.cpp
	OpFuncBase.cpp
	EpFunc.cpp
	HopFunc.cpp
	SparseMatrix.cpp
	doubleEq.cpp
	testAsync.cpp
    )
